--- a/youtubeclone/index.html
+++ b/youtubeclone/index.html
@@ -239,7 +239,7 @@
                             </div>
                                 <div class="title">
                                     <h3>Java Tutorials For Beginners in Hindi</h3>
-                                    <a href="https://www.youtube.com/@CodeWithHarry">codeWithHarry</a>
+                                    <a href="https://www.youtube.com/@CodeWithHarry">codeWithHarry ✔</a>
                                     <span>3.2M views.3 years ago</span>
                                </div>
                         </div>
@@ -255,11 +255,108 @@
                             </div>
                                 <div class="title">
                                     <h3>Java Tutorials For Beginners in Hindi</h3>
-                                    <a href="https://www.youtube.com/@CodeWithHarry">codeWithHarry</a>
+                                    <a href="https://www.youtube.com/@CodeWithHarry">codeWithHarry ✔</a>
                                     <span>3.2M views.3 years ago</span>
                                </div>
                         </div>
                 </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=Ez8F0nW6S-w"><img src="https://i.ytimg.com/vi/Ez8F0nW6S-w/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBgAkk4iMExxaUaQLsm7cY0TRtgLg" alt="Apna College"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/00yIYVKjmFvR7sFZXmP5aMq1u0P7ZcLfnDW27A7zRD1hTqcWLwYn0-o_5rGkK2eKfCf43ueE7Q=s68-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>Complete Git and GitHub Tutorial for Beginners</h3>
+                                    <a href="https://www.youtube.com/@ApnaCollegeOfficial">Apna College ✔</a>
+                                    <span>2.1M views.9 Months ago</span>
+                               </div>
+                        </div>
+                </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=ntLJmHOJ0ME&list=PLu0W_9lII9agS67Uits0UnJyrYiXhDS6q"><img src="https://i.ytimg.com/vi/ntLJmHOJ0ME/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDyFQ0oe6H-Ti29BAon05OD2dTC3Q" alt="Venom trailer"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/ytc/AIdro_kNaumymcxYzV7_n7_VRbQ2TRlIbU2w5csOMN0cH8jiED8=s48-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>Java Tutorials For Beginners in Hindi</h3>
+                                    <a href="https://www.youtube.com/@CodeWithHarry">codeWithHarry ✔</a>
+                                    <span>3.2M views.3 years ago</span>
+                               </div>
+                        </div>
+                </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=Ez8F0nW6S-w"><img src="https://i.ytimg.com/vi/Ez8F0nW6S-w/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBgAkk4iMExxaUaQLsm7cY0TRtgLg" alt="Apna College"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/00yIYVKjmFvR7sFZXmP5aMq1u0P7ZcLfnDW27A7zRD1hTqcWLwYn0-o_5rGkK2eKfCf43ueE7Q=s68-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>Complete Git and GitHub Tutorial for Beginners</h3>
+                                    <a href="https://www.youtube.com/@ApnaCollegeOfficial">Apna College ✔</a>
+                                    <span>2.1M views.9 Months ago</span>
+                               </div>
+                        </div>
+                </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=ESnrn1kAD4E"><img src="https://i.ytimg.com/vi/ESnrn1kAD4E/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCM4TFslI3SlIi1HgliT3Rcy6cT1w" alt="Apna College"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/00yIYVKjmFvR7sFZXmP5aMq1u0P7ZcLfnDW27A7zRD1hTqcWLwYn0-o_5rGkK2eKfCf43ueE7Q=s68-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>CSS Tutorial for Beginners | Complete CSS with Project, Notes & Code</h3>
+                                    <a href="https://www.youtube.com/@ApnaCollegeOfficial">Apna College ✔</a>
+                                    <span>6.3M views 1 year ago</span>
+                               </div>
+                        </div>
+                </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=ESnrn1kAD4E"><img src="https://i.ytimg.com/vi/ESnrn1kAD4E/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCM4TFslI3SlIi1HgliT3Rcy6cT1w" alt="Apna College"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/00yIYVKjmFvR7sFZXmP5aMq1u0P7ZcLfnDW27A7zRD1hTqcWLwYn0-o_5rGkK2eKfCf43ueE7Q=s68-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>CSS Tutorial for Beginners | Complete CSS with Project, Notes & Code</h3>
+                                    <a href="https://www.youtube.com/@ApnaCollegeOfficial">Apna College ✔</a>
+                                    <span>6.3M views 1 year ago</span>
+                               </div>
+                        </div>
+                </div> 
+
+                <div class="video">
+                    <div class="video-thumbnail">
+                       <a href="https://www.youtube.com/watch?v=Ez8F0nW6S-w"><img src="https://i.ytimg.com/vi/Ez8F0nW6S-w/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBgAkk4iMExxaUaQLsm7cY0TRtgLg" alt="Apna College"></a>
+                    </div>
+                        <div class="video-details">
+                            <div class="author">
+                                <img src="https://yt3.ggpht.com/00yIYVKjmFvR7sFZXmP5aMq1u0P7ZcLfnDW27A7zRD1hTqcWLwYn0-o_5rGkK2eKfCf43ueE7Q=s68-c-k-c0x00ffffff-no-rj" alt="">
+                            </div>
+                                <div class="title">
+                                    <h3>Complete Git and GitHub Tutorial for Beginners</h3>
+                                    <a href="https://www.youtube.com/@ApnaCollegeOfficial">Apna College ✔</a>
+                                    <span>2.1M views.9 Months ago</span>
+                               </div>
+                        </div>
+                </div> 
+
 
             </div>
         </div> 
