css_grid modified

--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -57,7 +57,7 @@
             <div class="four">
                 <img src="	https://kabir-sagiii.github.io/CSS_Grid_learn-grid-the-easy-way/images/image-jeanette.jpg" alt="">
                 <div class="subpara">
-                    <p>Jeanette Harmon</p>
+                    <p id="jean">Jeanette Harmon</p>
                     <p>Verified Graduate</p>
                 </div>
             </div>
