major_project modi.

--- a/major_project/index.html
+++ b/major_project/index.html
@@ -16,6 +16,7 @@
         src="https://www.free-css.com/assets/files/free-css-templates/preview/page259/aria/assets/images/logo.svg"
         alt="website template image"
       />
+      <span class="menu"><i class="fa-solid fa-bars"></i></span>
       <ul>
         <li>
           <a href="#home">Home</a>
@@ -334,28 +335,28 @@
           <button>SEO</button>
         </div>
         <div class="project-demo">
-          <div class="demo">
+          <div class="demo" id="one">
             <img src="assets/project-1.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="two">
             <img src="assets/project-1.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="three">
             <img src="assets/project-2.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="four">
             <img src="assets/project-2.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="five">
             <img src="assets/project-4.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="six">
             <img src="assets/project-4.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="seven">
             <img src="assets/project-1.jpg" alt="">
           </div>
-          <div class="demo">
+          <div class="demo" id="eight">
             <img src="assets/project-2.jpg" alt="">
           </div>
         </div>
